Added main.sc and edit makefile to make the main instead of susan

--- a/Lab1/specc/makefile
+++ b/Lab1/specc/makefile
@@ -7,7 +7,7 @@
 
 # --- macros -------------------------------------------------------------
 
-ALL	= susan
+ALL	= main
 
 SCC	= scc
 SCCOPT	= -vv -w -g -d
