--- a/Lab2/a2/designII/Makefile
+++ b/Lab2/a2/designII/Makefile
@@ -13,7 +13,7 @@ SCFILES = c_uchar7220_queue.sc c_int7220_queue.sc\
 	write_image.sc stimulus.sc monitor.sc design.sc susan_edge_detector.sc
 
 SIRFILES = c_uchar7220_queue.sir c_int7220_queue.sir\
-        i_os_api.sc speccos.sc setup_brightness_lut.sir susan_edges.sir detect_edges.sir susan_thin.sir edge_draw.sir read_image.sir\
+        i_os_api.sir speccos.sir setup_brightness_lut.sir susan_edges.sir detect_edges.sir susan_thin.sir edge_draw.sir read_image.sir\
 	write_image.sir design.sir stimulus.sir monitor.sir susan_edge_detector.sir
 
 SCCOPTS = -vv -ww -g -d #-par
